--- a/backend/config.env
+++ b/backend/config.env
@@ -1,7 +1,6 @@
 PORT=8000
-DATABASE=mongodb+srv://harmeetsinghfbd:HpnCZCAN6gB54GrI@cluster0.oecf9.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
-DATABASE_LOCAL=mongodb://127.0.0.1:27017/TourApplication
-
+DATABASE="mongodb+srv://harmeetsinghfbd:HpnCZCAN6gB54GrI@cluster0.oecf9.mongodb.net/"
+NODE_ENV=development
 JWT_SECRET=secret
 JWT_EXPIRES_IN=90d
 
